# Multimodal-Video-Rag

./: .gitignore  README.md  __init__.py  main.py  pyproject.toml  req.txt  test_qa.py
api/: __init__.py  cli.py
core/: __init__.py  frame_extractor.py  transcript_extractor.py
examples/: complete_pipeline.py
framewise/: _init_.py  cli.py
framewise/core/: __init__.py  frame_extractor.py  transcript_extractor.py
framewise/embeddings/: embedder.py
framewise/retrieval/: qa_system.py  vector_store.py
framewise/utils/: transcript_corrections.py
ingestion/: __init__.py  frame_extractor.py  pipeline.py  transcript_extractor.py
ingestion/utils/: transcript_corrections.py
processed_videos/10-machine-learning-specialization-course-1-week-09944c72/: transcript.json
processed_videos/2-machine-learning-specialization-course-1-week--cfb78b79/: transcript.json
processed_videos/3-machine-learning-specialization-course-1-week--e9599724/: transcript.json
processed_videos/4-machine-learning-specialization-course-1-week--534d00ab/: transcript.json
processed_videos/6-machine-learning-specialization-course-1-week--623af5df/: transcript.json
processed_videos/9-machine-learning-specialization-course-1-week--df2fc5ca/: transcript.json
processed_videos/tmp2k3ic4ba-9b2e9ba1/: transcript.json
processed_videos/tmpd-3i4afh-e8f328c3/: transcript.json
processed_videos/tmpkynm3dc1-a612ff72/: transcript.json
processed_videos/vid01/: transcript.json
query/: __init__.py
storage/: __init__.py
test/: conftest.py  test_ingest.py  test_qa.py
ui/: __init__.py
(+7 files in other folders)
